add dollar sign

--- a/index.html
+++ b/index.html
@@ -123,8 +123,8 @@
             </button>
             <div class="single-slider1"></div>
             <div style="display: flex; justify-content: space-between">
-                <span>0</span>
-                <span>1000</span>
+                <span>$0</span>
+                <span>$1000</span>
             </div>
 
             <br />
@@ -144,8 +144,8 @@
             </button>
             <div class="single-slider2"></div>
             <div style="display: flex; justify-content: space-between">
-                <span>0</span>
-                <span>1000</span>
+                <span>$0</span>
+                <span>$1000</span>
             </div>
 
             <br />
@@ -165,8 +165,8 @@
             </button>
             <div class="single-slider3"></div>
             <div style="display: flex; justify-content: space-between">
-                <span>0</span>
-                <span>1000</span>
+                <span>$0</span>
+                <span>$1000</span>
             </div>
         </main>
 
