--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 height: 865px;
             ">
         <br />
-        <div style="display: flex">
+        <div style="display: flex; position: relative; top: 35px;">
             <button style="
                         position: relative;
                         left: -25px;
@@ -82,7 +82,7 @@
             </button>
         </div>
         <br />
-        <div style="display: flex; justify-content: space-between; position: relative; top:335px" class="container">
+        <div style="display: flex; justify-content: space-between; position: relative; top:370px" class="container">
             <div>
                 $1000
                 <div class="vertical-slider1" style="height: 320px"></div>
